<resources>
    <string name="app_name">babyHarmonyApplication</string>
    <string name="Bienvenida">Bienvenido! </string>
    <string name="entrar">Iniciar </string>
    <string name="entrarInvitado">Ingresar como Invitado </string>
    <string name="tuti1"> Baby</string>
    <string name="termino">Al continuar aceptas \n los términos y condiciones</string>
    <string name="tuti3">Términos y Condiciones</string>
    <string name="tuti1.2">Harmony </string>
    <string name="tuti2"> Explora  la  anatomia\ndel cuerpo de tu bebe </string>
    <string name="entrar2">Ingresar </string>

    <string name="username">Usuario </string>
    <string name="contra">Contraseña </string>
    <string name="olvidaste">Olvidaste la contraseña? </string>
    <string name="nuevoUsuario">Nuevo usuario? Registrate </string>

    <string name="config">Configuracion </string>
    <string name="cuenta">Cuenta </string>
    <string name="perfil"> Perfil</string>
    <string name="noti">Notificacion </string>
    <string name="priva">Terminos y Privacidad </string>
    <string name="cerra">  Cerrar Cuenta</string>
    <string name="regios">Registarse </string>


    <string name="nombreUsuario">Nombre </string>
    <string name="ApellidoUsuario">Apellido</string>
    <string name="correoElectronico">Correo Electronico</string>
    <string name="edad">Edad</string>
    <string name="fechaNacimiento">Fecha de Nacimiento </string>
    <string name="telefono">Telefono </string>
    <string name="emailTitu">email: </string>
    <string name="nombreBebe">nombre de tu bebe</string>
    <string name="fechadenacimientoTitu"> Fecha de Nacimiento:</string>

    <string name="biografiaUsuario">   </string>
    <string name="edadUsuario">Edad: </string>
    <string name="telefonoUsuario">Telefono: </string>

    <string name="aprender">Aprender </string>
    <string name="elige">Elige una parte de  </string>
    <string name="cabeza">Cabeza </string>
    <string name="torso"> Torso</string>
    <string name="brazo">Brazos </string>
    <string name="piernas">Piernas </string>
    <string name="elige2">Partes de la Cabeza </string>
    <string name="cabello">Cabello</string>
    <string name="ojos">Ojos</string>
    <string name="nariz">Nariz</string>
    <string name="aprender2">Cabeza</string>

    <string name="aprender3">Torso</string>
    <string name="elige3">Partes del Torso </string>
    <string name="pecho">Pecho</string>
    <string name="barriga">Barriga</string>
    <string name="espalda">Espalda</string>
    <string name="aprender4">Piernas</string>
    <string name="pierna">Partes de las piernas </string>
    <string name="rodilla">Rodilla</string>
    <string name="pie">Pie </string>
    <string name="muslos"> Muslos </string>

    <string name="aprender5">Brazos</string>
    <string name="elije7">Parte de los brazos </string>
    <string name="mano"> Manos</string>
    <string name="Hombro">Hombro </string>
    <string name="ante">Antebrazos </string>
    <string name="mib">Mi Bebe </string>

    <string name="text">No has iniciado sesión? </string>
    <string name="text1">¿Qué esperas? ¡Inicia sesión ahora y empieza a personalizar a tu bebé! </string>
    <string name="secon">Iniciar Sesion </string>
    <string name="registrobebe">Registrar Bebe </string>
    <string name="txt2">No tienes a tu bebe \n registrado! </string>
    <string name="txt3">Registralo ahora </string>

    <string name="txt4">Agregar Informacion general de tu bebe </string>
    <string name="txt5">Cuidador (papa o mama)</string>
    <string name="txt6">Genero </string>

    <string name="selecciona_sexo">Selecciona Sexo</string>
        <string name="sexo_masculino">Masculino</string>
        <string name="sexo_femenino">Femenino</string>

    <string name="nacimiento">Nacimiento </string>
    <string name="selccnaci">Nacimiento de tu bebe</string>
    <string name="txt7">Peso </string>
    <string name="peso">peso de tu bebe</string>
    <string name="txt8">Altura </string>
    <string name="altu">Altura de tu bebe </string>
    <string name="siguiente">Registrar bebe </string>

    <string name="limpi">Limpiar todas las notificaciones </string>
    <string name="home">Home </string>
    <string name="biotitu">Biografía</string>
    <string name="biografiahint">Escribe tu biografía aquí...</string>

    <string name="contenido">Contenido </string>
    <string name="titulocontenido">titulo </string>
    <string name="textoContenido">Lorem isum dolor sit amet, consectetur adipiscing elit. Dsum dolor sit amet, consectetur adipiscing elit. Dsum dolor sit amet, consectetur adipiscing elit. Dsum dolor sit amet, consectetur adipiscing elit. Dsum dolor sit amet, consectetur adipiscing elit. Dsum dolor sit amet, consectetur adipiscing elit. Dsum dolor sit amet, consectetur adipiscing elit. Dsum dolor sit amet, consectetur adipiscing elit. Dsum dolor sit amet, consectetur adipiscing elit. Dsum dolor sit amet, consectetur adipiscing elit. Dpsum dolor sit amet, consectetur adipiscing elit. Duis at magna lacinia, rutrum nibh et, fermentum turpis. Curabitur aliquet tristique luctus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut dignissim sodales libero, a condimentum dolor ornare quis. Vestibulum enim odio, ornare fringilla sodales eget, semper eget massa. In hac habitasse platea dictumst. Phasellus imperdiet et magna vitae pulvinar. </string>

    <string name="titu5">Nueva Contraseña</string>
    <string name="nueva">Ingresa tu nueva contraseña:</string>
    <string name="nuevanu">confirma tu nueva contraseña:</string>
    <string name="cont">al menos 8 caracteres</string>
    <string name="doctor">Dr. James, MD</string>
    <string name="leer">leer mas...</string>
    <string name="tema1">El descanso óptimo del bebé"</string>
    <string name="tema2">El mejor desayuno de tu hijo</string>
    <string name="tema3">Como cargar de forma correcta a tu bebe</string>














    <string name="terminos">
El presente Política de Privacidad establece los términos en que babyHarrmony usa y protege la información que es proporcionada por sus usuarios al momento de utilizar su sitio web. Esta compañía está comprometida con la seguridad de los datos de sus usuarios. Cuando le pedimos llenar los campos de información personal con la cual usted pueda ser identificado, lo hacemos asegurando que sólo se empleará de acuerdo con los términos de este documento. Sin embargo esta Política de Privacidad puede cambiar con el tiempo o ser actualizada por lo que le recomendamos y enfatizamos revisar continuamente esta página para asegurarse que está de acuerdo con dichos cambios.
Información que es recogida
Nuestro sitio web podrá recoger información personal por ejemplo: Nombre,  información de contacto como  su dirección de correo electrónica e información demográfica. Así mismo cuando sea necesario podrá ser requerida información específica para procesar algún pedido o realizar una entrega o facturación.
Uso de la información recogida
Nuestro sitio web emplea la información con el fin de proporcionar el mejor servicio posible, particularmente para mantener un registro de usuarios, de pedidos en caso que aplique, y mejorar nuestros productos y servicios.  Es posible que sean enviados correos electrónicos periódicamente a través de nuestro sitio con ofertas especiales, nuevos productos y otra información publicitaria que consideremos relevante para usted o que pueda brindarle algún beneficio, estos correos electrónicos serán enviados a la dirección que usted proporcione y podrán ser cancelados en cualquier momento.
babyHarrmony está altamente comprometido para cumplir con el compromiso de mantener su información segura. Usamos los sistemas más avanzados y los actualizamos constantemente para asegurarnos que no exista ningún acceso no autorizado.
Cookies
Una cookie se refiere a un fichero que es enviado con la finalidad de solicitar permiso para almacenarse en su ordenador, al aceptar dicho fichero se crea y la cookie sirve entonces para tener información respecto al tráfico web, y también facilita las futuras real madrid cf noticias recurrente. Otra función que tienen las cookies es que con ellas las web pueden reconocerte individualmente y por tanto brindarte el mejor servicio personalizado de su web.
Nuestro sitio web emplea las cookies para poder identificar las páginas que son visitadas y su frecuencia. Esta información es empleada únicamente para análisis estadístico y después la información se elimina de forma permanente. Usted puede eliminar las cookies en cualquier momento desde su ordenador. Sin embargo las cookies ayudan a proporcionar un mejor servicio de los sitios web, estás no dan acceso a información de su ordenador ni de usted, a menos de que usted así lo quiera y la proporcione directamente. Usted puede aceptar o negar el uso de cookies, sin embargo la mayoría de navegadores aceptan cookies automáticamente pues sirve para tener un mejor servicio web. También usted puede cambiar la configuración de su ordenador para declinar las cookies. Si se declinan es posible que no pueda utilizar algunos de nuestros servicios.
Enlaces a Terceros
Este sitio web pudiera contener en laces a otros sitios que pudieran ser de su interés. Una vez que usted de clic en estos enlaces y abandone nuestra página, ya no tenemos control sobre al sitio al que es redirigido y por lo tanto no somos responsables de los términos o privacidad ni de la protección de sus datos en esos otros sitios terceros. Dichos sitios están sujetos a sus propias políticas de privacidad por lo cual es recomendable que los consulte para confirmar que usted está de acuerdo con estas.
Control de su información personal
En cualquier momento usted puede restringir la recopilación o el uso de la información personal que es proporcionada a nuestro sitio web.  Cada vez que se le solicite rellenar un formulario, como el de alta de usuario, puede marcar o desmarcar la opción de recibir información por correo electrónico.  En caso de que haya marcado la opción de recibir nuestro boletín o publicidad usted puede cancelarla en cualquier momento.
Esta compañía no venderá, cederá ni distribuirá la información personal que es recopilada sin su consentimiento, salvo que sea requerido por un juez con un orden judicial.
babyHarrmony Se reserva el derecho de cambiar los términos de la presente Política de Privacidad en cualquier momento.</string>

</resources>