<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Bienvenida"
        android:textSize="28sp"
        android:layout_marginTop="150dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/username"
        android:layout_below="@id/text_bienvenida"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/contra"
        android:layout_below="@id/username"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_below="@id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/azu"
        android:layout_gravity="center_horizontal"
        android:text="@string/olvidaste"
         />

    <Button
        android:id="@+id/btnLogin"
        android:layout_below="@id/forgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/amarilo"
        android:text="@string/entrar2"
        android:textSize="19dp"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/nuevoUsuario"
         />

    <Button
        android:id="@+id/btnInvitado"
        android:layout_below="@id/forgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/azu"
        android:text="@string/entrarInvitado"
        android:textColor="@android:color/white" />
</LinearLayout>