<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titu5"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/nueva"
        android:textSize="16sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cont"
        android:inputType="text"
        android:background="@drawable/formaedit_text"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="14dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/nuevanu"
        android:textSize="16sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/formaedit_text"

        android:inputType="text"
        android:layout_marginBottom="14dp"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar2"
        android:backgroundTint="#F9C63E"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"/>

</LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageButton
            android:id="@+id/navigation_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:onClick="navigateBack"
            android:scaleType="fitCenter"
            android:src="@drawable/patra" />
    </FrameLayout>
</RelativeLayout>