<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/maternida"
        android:scaleType="centerCrop"
        android:layout_marginBottom="16dp" />

    <HorizontalScrollView
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignTop="@id/background_image"
        android:layout_alignBottom="@id/background_image"
        android:layout_marginBottom="120dp"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/navigation_icon"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:background="@android:color/transparent"
                android:src="@drawable/patra"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:onClick="onBackPressed" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/regios"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />

        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_layout"
        android:padding="16dp"
        android:layout_marginTop="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ingresa los siguientes datos"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombreUsuario"
                android:inputType="text"
                android:background="@drawable/shape"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="14dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ApellidoUsuario"
                android:background="@drawable/shape"
                android:inputType="text"
                android:layout_marginBottom="14dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correoElectronico"
                android:inputType="textEmailAddress"
                android:background="@drawable/shape"
                android:layout_marginBottom="14dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:hint="@string/edad"
                android:inputType="number"
                android:layout_marginBottom="14dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fechaNacimiento"
                android:inputType="date"
                android:background="@drawable/shape"
                android:layout_marginBottom="14dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                android:inputType="phone"
                android:background="@drawable/shape"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"
                android:background="@drawable/shape"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="14dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contra"
                android:inputType="text"
                android:background="@drawable/shape"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="14dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regios"
                android:backgroundTint="#F9C63E"
                android:textColor="@android:color/white"
                android:layout_marginTop="30dp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
